# Electrical-measurements

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  README.md  REDESIGN.md  main.py  pyproject.toml  requirements.txt
core/: channels.py  derived.py  session.py  validation.py
docs/: architecture.md
docs/specs/: 01-instrument-registry.md  02-external-smu-adapter.md  03-executor-tree.md
gui/: channels_tab.py  config_panel.py  dynamic_plot.py  main_window.py  routing_tab.py
instruments/: b2902b.py  m81.py  m81_channels.py  matrix7709.py  registry.py  scpi.py
instruments/_vendor/: __init__.py  exceptions.py  mock.py
measurements/: engine.py  executors.py  routing.py  sequence.py
tests/: conftest.py  test_b2902b.py  test_backend_mock.py  test_derived.py  test_engine.py  test_executors.py  test_registry.py  test_routing.py  test_sequence.py  test_session.py  test_validation.py
