[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "elecmeas"
version = "2.0.0"
description = "GUI for electronic transport measurements with the Lake Shore M81-SSM"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "PySide6>=6.4.0",
    "pyqtgraph>=0.13.0",
    "numpy>=1.21.0",
    "pyvisa>=1.13.0",   # Keithley 7709 matrix transport (lazy-imported; real hardware only)
]

[project.optional-dependencies]
# Real Lake Shore M81-SSM hardware. Not needed for simulation, tests or CI:
# the physics mock is vendored in instruments/_vendor.  The real-hardware driver
# (M81Controller) still comes from the sibling M81_electr_meas checkout.
hardware = ["lakeshore>=1.5.0"]
dev = ["pytest>=7.0.0"]

[project.scripts]
elecmeas = "main:main"

[tool.setuptools]
py-modules = ["main"]
packages = ["core", "instruments", "instruments._vendor", "measurements", "gui"]
